# bounce-game

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json  main.cpp
executable/: prog
images/: menu_button_play.aseprite
